# regexgen-rs

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  mytext.txt  serve.py
src/: lib.rs
