[package]
name = "regexgen-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    "Window",
    "Selection",
    "Range",
    "Text",
    "Node",
    "NodeList",
    "DomTokenList",
    "CssStyleDeclaration",
    "Event",
    "MouseEvent",
    "EventTarget",
    "Storage"
]}
js-sys = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
